// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a main branch correctly 1`] = `
<li
  className="item"
  onClick={[Function]}
>
  <div
    className="display-flex-center display-flex-space-between"
  >
    <div
      className="item-name text-ellipsis"
      title="master"
    >
      <BranchLikeIcon
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": true,
            "name": "master",
          }
        }
      />
      <span
        className="spacer-left"
      >
        master
      </span>
      <span
        className="badge spacer-left"
      >
        branches.main_branch
      </span>
    </div>
    <div
      className="spacer-left"
    >
      <Connect(BranchStatus)
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": true,
            "name": "master",
          }
        }
        component="my-project"
      />
    </div>
  </div>
</li>
`;

exports[`should render a non-main branch, indented and selected item correctly 1`] = `
<li
  className="item active"
  onClick={[Function]}
>
  <div
    className="display-flex-center display-flex-space-between big-spacer-left"
  >
    <div
      className="item-name text-ellipsis"
      title="1001 – Foo Bar feature"
    >
      <BranchLikeIcon
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
      />
      <span
        className="spacer-left"
      >
        1001 – Foo Bar feature
      </span>
    </div>
    <div
      className="spacer-left"
    >
      <Connect(BranchStatus)
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
        component="my-project"
      />
    </div>
  </div>
</li>
`;
